ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-mojito-ingress
  namespace: nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 ingressClassName: nginx
 rules:
    - http:
        paths:
          - pathType:  Prefix
            path: /nginx
            backend:
              service:
                name: nginx-service
                port:
                  number: 3000

          - pathType: Prefix
            path: /app
            backend:
              service:
                name: mojito-service
                port:
                  number: 3001
